--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ env:
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
   SOURCE_REPO: https://github.com/bitcoin/bitcoin
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }} # please make sure it does not conflict with your github username, otherwise use email
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
