--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -46,8 +46,8 @@ jobs:
         with:
           cosign-release: 'v2.0.0'
 
-      # Workaround: https://github.com/docker/build-push-action/issues/461
-      - name: Setup Docker buildx
+      # Set up Docker BuildX
+      - name: Setup Docker BuildX
         uses: docker/setup-buildx-action@v2
         with:
           platforms: ${{ matrix.platforms }}
