--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -75,7 +75,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: [${{ env.IMAGE_NAME }}, ghcr.io/${{ env.IMAGE_NAME }}]
+          images: ghcr.io/${{ env.IMAGE_NAME }}
           flavor: latest=auto
           tags: |
             # set latest tag for default branch
