--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,6 +9,7 @@ env:
   SOURCE_REPO: https://github.com/bitcoin/bitcoin
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+  DOCKERHUB_ORGANIZATION: ${{ secrets.DOCKERHUB_ORGANIZATION || github.actor }}
 
 jobs:
   build:
@@ -55,7 +56,7 @@ jobs:
       # Login against a Docker registry except on PR, push to ghcr.io by default
       # If DOCKERHUB_USERNAME and DOCKERHUB_TOKEN secrets are set, push to Docker Hub also
       # https://github.com/docker/login-action
-      - name: Log into registry ${{ env.REGISTRY }}
+      - name: Log into registry ghcr.io
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
@@ -75,7 +76,9 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/${{ env.IMAGE_NAME }}
+          images: |
+            ghcr.io/${{ env.IMAGE_NAME }}
+            ${{ env.IMAGE_NAME }}
           flavor: latest=auto
           tags: |
             # set latest tag for default branch
