--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -77,10 +77,9 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: [
-            ghcr.io/${{ env.IMAGE_NAME }},
+          images: |
+            ghcr.io/${{ env.IMAGE_NAME }}
             ${{ env.USE_DOCKERHUB == 'true' && env.IMAGE_NAME }}
-          ]
           flavor: latest=auto
           tags: |
             # set latest tag for default branch
