--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -79,7 +79,7 @@ jobs:
         with:
           images: |
             ghcr.io/${{ env.IMAGE_NAME }}
-            ${{ env.USE_DOCKERHUB == 'true' && env.IMAGE_NAME }}
+            ${{ env.USE_DOCKERHUB == 'true' && env.IMAGE_NAME || '' }}
           flavor: latest=auto
           tags: |
             # set latest tag for default branch
