--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,16 +14,6 @@ env:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        platforms:
-          - linux/arm64
-          - linux/amd64
-          - linux/arm/v7
-          - linux/arm/v6
-          - linux/ppc64le
-          - linux/s390x
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -95,7 +85,7 @@ jobs:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
-          platforms: ${{ matrix.platforms }}
+          platforms: linux/s390x, linux/ppc64le, linux/arm64, linux/arm/v7, linux/arm/v6, linux/amd64, linux/s390x
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             DOCKER_GIT_SHA=${{ github.sha }}
