--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,6 +10,9 @@ on:
   schedule:
     - cron: '1 1 1 * *'
 
+env:
+  DOCKER_PLATFORMS: ${{ env.DOCKER_PLATFORMS || 'linux/s390x, linux/ppc64le, linux/arm64, linux/arm/v7, linux/arm/v6, linux/amd64, linux/s390x' }}
+
 jobs:
   build:
     strategy:
