--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,13 +17,7 @@ jobs:
   build:
     strategy:
       matrix:
-        platforms:
-          - linux/arm64
-          - linux/amd64
-          - linux/arm/v7
-          - linux/arm/v6
-          - linux/ppc64le
-          - linux/s390x
+        platforms: [ ${{ env.DOCKER_PLATFORMS }} ]
 
     runs-on: ubuntu-latest
 
