--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,9 @@ jobs:
   build:
     strategy:
       matrix:
-        platforms: [ ${{ env.DOCKER_PLATFORMS }} ]
+        platforms: [
+          ${{ env.DOCKER_PLATFORMS }}
+        ]
 
     runs-on: ubuntu-latest
 
