--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,12 +14,20 @@ env:
   DOCKER_PLATFORMS: ${{ vars.DOCKER_PLATFORMS || 'linux/s390x, linux/ppc64le, linux/arm64, linux/arm/v7, linux/arm/v6, linux/amd64, linux/s390x' }}
 
 jobs:
+  matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      platforms: ${{ steps.platforms_matrix.outputs.platforms }}
+    steps:
+      - name: Platforms matrix
+        id: platforms_matrix
+        run: |
+          echo "platforms=$(echo '${{ env.DOCKER_PLATFORMS }}' | tr -d ' ' | tr ',' '\n' | jq -R . | jq -s .)"  
+
   build:
     strategy:
       matrix:
-        platforms: [
-          ${{ env.DOCKER_PLATFORMS }}
-        ]
+        platforms: {{ fromJson(needs.matrix.outputs.platforms) }}}
 
     runs-on: ubuntu-latest
 
