changed multiarch settings

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
   build:
     strategy:
       matrix:
-        platforms: {{ fromJson(needs.matrix.outputs.platforms) }}}
+        platforms: ${{ fromJson(needs.matrix.outputs.platforms) }}}
 
     runs-on: ubuntu-latest
 
