--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -86,7 +86,7 @@ jobs:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
-          platforms: env.DOCKER_PLATFORMS
+          platforms: ${{ env.DOCKER_PLATFORMS }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             DOCKER_GIT_SHA=${{ github.sha }}
