--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -84,7 +84,9 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          config: .github/buildkitd.toml
+          config-inline: |
+            [worker.oci]
+              max-parallelism = 4
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           platforms: ${{ env.DOCKER_PLATFORMS }}
