--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,6 +16,10 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    #
+    timeout-minutes: 720
+
     permissions:
       contents: read
       packages: write
